@@ -7,6 +7,7 @@
 	(debbugs-display-status): New command and keystroke.
 	(debbugs-widget-map): New keymap.
 	(debbugs-emacs): Use it.
+	(debbugs-toggle-sort): Make sorting work again.
 
 2011-07-03  Michael Albinus  <michael.albinus@gmx.de>
 
